--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,33 +8,56 @@
   
 html {
     background-image: url(/assets/img/FundoImg.svg);
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 90% 100%;
+}
+
+body{
+    /* overflow: hidden; */
+    margin: 50px;
 }
 
 .flex{
     display: flex;
 }
 
+.hr{
+    margin: 40px 0;
+    border-left: 1px solid #000000;
+    height: 400px;
+}
+
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vh;    
 }
 
 .box{
     background: rgba(206, 224, 220, 0.45);
     border-radius: 10px;
-    margin: 100px 100px 50px 50px;
+    height: 500px; 
+    margin-left: auto; 
+    margin-right: auto;
 }
 
 .salutation{
-    margin-left: 9rem;
+    /* margin-left: 9rem; */
+    display: grid;
+    text-align: center;
+    align-items: center;
+    /* top | right | bottom | left */
+    margin: 150px 130px 150px 0px;
 }
 
+
 .main-login{
-    margin-left: 22rem;
+    display: grid;
+    /* top | right | bottom | left */
+    margin: 50px 0px 0px 250px;
 }
 
 label{
@@ -49,6 +72,10 @@ label{
 
 h1,h3{
     font-family: 'Titillium Web', sans-serif;
+}
+
+.salutation > h1{
+    font-size: 66px;
 }
 
 h1{
@@ -80,6 +107,7 @@ input{
 .forget{
     text-align: right;
     text-decoration: underline;
+    font-size: 12px;
 }
 
 button{
@@ -103,7 +131,5 @@ button{
     display: grid;
     text-align: center;
     margin-top: 1.7rem;
+    font-size: 12px;
 }
-
-
-
